syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "Protos/models.proto";

option csharp_namespace = "ExamBackend";
package staff;

message GetStaffRequest {
  optional Position PositionFilter = 1;
}

message GetStaffResponse {
    repeated StaffMember Members = 1;  
}

message CreateStaffRequest {
  string FirstName = 1;
  optional string MiddleName = 2;
  string LastName = 3;
  int32 Wage = 4;
  Position Position = 5;
}

message DeleteStaffRequest {
  string StaffId = 1;
}

service StaffApi {
  rpc GetStaff (GetStaffRequest) returns (GetStaffResponse) {
    option (google.api.http) = {
      get: "/v1/staff.StaffApi/GetStaff"
    };
  };
  rpc CreateStaffMember (CreateStaffRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/staff.StaffApi/CreateStaffMember"
    };
  }; 
  rpc UpdateStaffMember (StaffMember) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/v1/staff.StaffApi/UpdateStaffMember"
    };
  };
  rpc DeleteStaffMember (DeleteStaffRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/staff.StaffApi/DeleteStaffMember"
    };
  };
}